fix: overflow footer on small screens

--- a/src/containers/TodoFooter/TodoFooter.module.scss
+++ b/src/containers/TodoFooter/TodoFooter.module.scss
@@ -2,6 +2,7 @@
 	position: relative;
 
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: baseline;
 
